notes from PR